# Fizzy: A fast WebAssembly interpreter
# Copyright 2019-2020 The Fizzy Authors.
# SPDX-License-Identifier: Apache-2.0

[package]
name = "fizzy-integration-test"
version = "0.9.0-dev"
authors = ["The Fizzy Authors"]
license = "Apache-2.0"
repository = "https://github.com/wasmx/fizzy"
edition = "2018"
publish = false

[dependencies]
fizzy = { path = "../", version = "0.9.0-dev" }
